--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,9 @@ add_executable(${PROJECT_NAME}
 	"App/App.cpp"
 	"Modules/ModuleInterface.h"
 	"Modules/Renderer/Renderer.h"
-	"Modules/Renderer/Renderer.cpp")
+	"Modules/Renderer/Renderer.cpp"
+	"Modules/Renderer/ValidationLayer/ValidationLayer.h"
+	"Modules/Renderer/ValidationLayer/ValidationLayer.cpp")
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
 target_include_directories(${PROJECT_NAME} PRIVATE ${EXTERNAL_LIBS_INCLUDES})
