--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 [Rr]elease/
 x64/
 [Bb]in/
+[Bb]uild/
 [Ll]og/
 [Ll]ogs/
 CMakeSettings.json
@@ -27,4 +28,4 @@ CMakeSettings.json
 *.out
 *.app
 *.spv
-/resources/shaders/*.spv
+/resources/shaders/compiled/
