--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,12 +10,14 @@ add_executable(${PROJECT_NAME}
 	"Modules/Renderer/Renderer.cpp"
 	"Modules/Renderer/Camera.h"
 	"Modules/Renderer/Camera.cpp"
-	"Modules/Renderer/Mesh.h"
-	"Modules/Renderer/Mesh.cpp"
+	"Modules/Renderer/Model.h"
+	"Modules/Renderer/Model.cpp"
 	"Modules/Renderer/Vulkan/Buffer.h"
 	"Modules/Renderer/Vulkan/Buffer.cpp"
 	"Modules/Renderer/Vulkan/Device.h"
 	"Modules/Renderer/Vulkan/Device.cpp"
+	"Modules/Renderer/Vulkan/Mesh.h"
+	"Modules/Renderer/Vulkan/Mesh.cpp"
 	"Modules/Renderer/Vulkan/Pipeline.h"
 	"Modules/Renderer/Vulkan/Pipeline.cpp"
 	"Modules/Renderer/Vulkan/ValidationLayer.h"
