refactor: swapchain wrapper class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,8 @@ add_executable(${PROJECT_NAME}
 	"Modules/Renderer/Vulkan/Mesh.cpp"
 	"Modules/Renderer/Vulkan/Pipeline.h"
 	"Modules/Renderer/Vulkan/Pipeline.cpp"
+	"Modules/Renderer/Vulkan/SwapChain.h"
+	"Modules/Renderer/Vulkan/SwapChain.cpp"
 	"Modules/Renderer/Vulkan/ValidationLayer.h"
 	"Modules/Renderer/Vulkan/ValidationLayer.cpp")
 
