feat: model vector based scene graph

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,17 +1,19 @@
 add_executable(${PROJECT_NAME} 
 	"entry.cpp"
-	"App/App.h"
-	"App/App.cpp"
-	"Window/Window.h"
-	"Window/Window.cpp"
-	"Window/InputKeys.h"
+	"Core/App.h"
+	"Core/App.cpp"
+	"Core/Window.h"
+	"Core/Window.cpp"
+	"Core/InputKeys.h"
 	"Modules/ModuleInterface.h"
 	"Modules/Renderer/Renderer.h"
 	"Modules/Renderer/Renderer.cpp"
-	"Modules/Renderer/Camera.h"
-	"Modules/Renderer/Camera.cpp"
-	"Modules/Renderer/Model.h"
-	"Modules/Renderer/Model.cpp"
+	"Modules/Scene/Camera.h"
+	"Modules/Scene/Camera.cpp"
+	"Modules/Scene/Model.h"
+	"Modules/Scene/Model.cpp"
+	"Modules/Scene/Graph.h"
+	"Modules/Scene/Graph.cpp"
 	"Modules/Renderer/Lighting/DirectionalLight.h"
 	"Modules/Renderer/Lighting/DirectionalLight.cpp"
 	"Modules/Renderer/Vulkan/Buffer.h"
