refactor: Transform wrapper struct

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,10 +10,12 @@ add_executable(${PROJECT_NAME}
 	"Modules/Renderer/Renderer.cpp"
 	"Modules/Scene/Camera.h"
 	"Modules/Scene/Camera.cpp"
-	"Modules/Scene/Model.h"
-	"Modules/Scene/Model.cpp"
 	"Modules/Scene/Graph.h"
 	"Modules/Scene/Graph.cpp"
+	"Modules/Scene/Model.h"
+	"Modules/Scene/Model.cpp"
+	"Modules/Scene/Transform.h"
+	"Modules/Scene/Transform.cpp"
 	"Modules/Renderer/Lighting/DirectionalLight.h"
 	"Modules/Renderer/Lighting/DirectionalLight.cpp"
 	"Modules/Renderer/Vulkan/Buffer.h"
